--- a/ECMLPKDD2018/HandsOn-1.ipynb
+++ b/ECMLPKDD2018/HandsOn-1.ipynb
@@ -1881,7 +1881,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>vQS-GPU</td>\n",
+       "      <td>QS-GPU</td>\n",
        "      <td>1492</td>\n",
        "      <td>0.4</td>\n",
        "    </tr>\n",
@@ -1896,7 +1896,7 @@
        "2       QS    1492              23.1\n",
        "3     v-QS    1492              15.1\n",
        "4  vQS-OMP    1492               1.2\n",
-       "5  vQS-GPU    1492               0.4"
+       "5  QS-GPU    1492               0.4"
       ]
      },
      "execution_count": 29,
@@ -1906,7 +1906,7 @@
    ],
    "source": [
     "# Store current results\n",
-    "results.loc[len(results)] = ['vQS-GPU', baseline_model.n_trees, scoring_time]\n",
+    "results.loc[len(results)] = ['QS-GPU', baseline_model.n_trees, scoring_time]\n",
     "results"
    ]
   },
